# Kratos-MCP-Server

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/guide/: architecture.md  connecting.md  getting-started.md  installation.md  mdpa-format.md  troubleshooting.md
docs/tools/: environment.md  index.md  interop.md  mesh.md  postprocessing.md  prompts.md  resources.md  scaffolding.md  simulation.md  visualization.md
docs/tutorials/: cantilever-beam.md  lid-driven-cavity.md  multistage.md  naca-airfoil.md  plasticity-cube.md  thermal-bar.md
notebooks/: cantilever.ipynb  fluid_cavity.ipynb  materials.ipynb  multistage.ipynb  naca_airfoil.ipynb
src/kratos_mcp/: bridge.py  flowgraph.py  jobs.py  kratos_env.py  logparse.py  mdpa.py  process_catalog.py  project_explain.py  render_worker.py  runner.py  server.py  source_catalog.py  worker.py
src/kratos_mcp/examples/cantilever/: Materials.json  ProjectParameters.json  mesh.mdpa
src/kratos_mcp/examples/lid_driven_cavity/: Materials.json  ProjectParameters.json  mesh.mdpa
src/kratos_mcp/examples/multistage_load_steps/: Materials.json  ProjectParameters.json  mesh.mdpa
src/kratos_mcp/examples/naca_airfoil/: Materials.json  ProjectParameters.json
src/kratos_mcp/examples/plasticity_cube/: Materials.json  mesh.mdpa  (+1 more)
src/kratos_mcp/templates/: linear_solvers.json  material_presets.json  registry.json
src/kratos_mcp/tools/: __init__.py  environment.py  interop.py  mesh.py  postprocess.py  prompts.py  resources.py  scaffold.py  simulation.py  visualize.py
tests/: conftest.py  smoke_client.py  test_bridge_integration.py  test_examples.py  test_interop.py  test_jobs.py  test_kratos_env.py  test_logparse.py  test_mdpa.py  test_multistage.py  test_process_catalog.py  test_run_integration.py  test_source_catalog.py  test_templates.py  test_visualize.py
(+11 files in other folders)
