[project]
name = "kratos-mcp-server"
version = "0.3.0"
description = "MCP server for Kratos Multiphysics: scaffold, run and post-process finite element simulations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vicente Mataix Ferrándiz" }]
dependencies = [
    "mcp>=1.10",
    "meshio>=5.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
viz = [
    "pyvista>=0.44",
    "imageio>=2.31",
]

[project.scripts]
kratos-mcp = "kratos_mcp.server:main"
kratos-mcp-server = "kratos_mcp.server:main"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kratos_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "kratos: integration tests that require a working Kratos build (deselect with '-m \"not kratos\"')",
]
asyncio_mode = "auto"
